# bookmarks

./: .gitignore  .tool-versions  Dockerfile  FUNDING.yml  Gemfile  README.md  add_bookmarks.rb  bookmarks.csv  bookmarks.db  bun.lockb  convert_to_json.sh  create_markdown.py  create_table.sql  entrypoint.sh  get_bookmarks.rb  package.json  parse_weblocs.ipynb  process.sql  pyproject.toml  summary.ipynb
bookmarks/: 00491b0a-62d4-4e60-b5dd-623897a4c941.json  008206a4-5482-47f6-91e9-4ab8c37e51c9.json  00ad6d44-73b8-4594-bc2e-a88fa1066504.json  00ada780-b6ba-4f99-98fd-1a56564b4535.json  00bb9e14-db1f-400b-bbf4-2e09f619f372.json  00d1f465-c25e-46c8-a6e2-400d8b82bbb6.json  01483f40-f58f-486c-8371-8fbbd8f5f8dd.json  0178a913-3f72-4727-a3dd-1620c376a0aa.json  01ca0dc5-830f-45dd-93b9-0a93d00bdcdc.json  025a1784-5675-4537-bf27-19e21a6615ea.json  0262974e-21e7-4490-9f1d-8254e204948e.json  039b890a-9ea1-4e02-af55-1383c0a9f662.json  03aa72b4-bff6-40bc-86e1-9f43fb77ba34.json  03fbb605-9ba4-445a-b7e8-c33471f03782.json  0431d757-11b0-42e7-8579-5436cce26129.json  043ac8a7-03df-4d2a-8611-9cc781b0f204.json  0499ab77-9140-4ad0-9f7b-374a3cb2c463.json  04bd75b9-22ec-4f43-81ad-5a98e237cb98.json  052f09bd-e946-4dc4-adf5-d13621ba28fd.json  054aecdc-2a36-4334-bd96-e1ccd812b36f.json  05c9b363-8165-47a9-81bb-64f6dcc8e666.json  0601ae01-416d-4a89-9c35-824c8bdde8d1.json  061b8942-108a-4167-a400-8685bef01557.json  063f5337-19f5-46af-a7b1-019382f2ee9f.json  06be6dcf-4e50-4308-9071-c3b075b64cf8.json  06cec855-28d4-4f43-9736-1ca8c8c78460.json  06d572b7-64f9-4a38-be70-3030b5ae0b2c.json  (+1309 more)
src/: data.json
(+5 files in other folders)
